--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "react-vite",
+  "name": "jay123",
   "private": true,
   "version": "0.0.0",
+   "homepage": "https://jay1234512345.github.io/jay123/",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+ "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "gh-pages -d dist"
+},
+
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
